--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
+dist: xenial
 language: python
+cache: pip
 python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"      # current default Python on Travis CI
-  - "3.7"
-  - "3.8"
-  - "3.8-dev"  # 3.8 development branch
-  - "nightly"  # nightly build
-# command to install dependencies
+    - "3.6"
+    - "3.7"
+    - "3.8"
+    - "nightly"
+matrix:
+    allow_failures:
+        - python: "nightly"
 install:
-  - pip install -r requirements.txt
-# command to run tests
+    - pip install pipenv --upgrade-strategy=only-if-needed
+    - pipenv install --dev
 script:
-  - pytest
-  
+    - bash scripts/test.sh
+after_script:
+    - bash <(curl -s https://codecov.io/bash)
