--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ install:
   - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
   - tar xf lcov_1.11.orig.tar.gz
   - sudo make -C lcov-1.11/ install
+  - gem install coveralls-lcov
   
 before_script:
   - cd ${TRAVIS_BUILD_DIR}
+  - lcov --directory . --zerocounters
 
 compiler:
   - clang
@@ -14,6 +16,7 @@ compiler:
 
 script:
   - cd ${TRAVIS_BUILD_DIR}
+  - make && ./test-library.out
   
 after_success:
 - cd ${TRAVIS_BUILD_DIR}
